istio-demo1/ex3/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: example1
  labels:
    app: example1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: example1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example1-v1
spec:
  selector:
    matchLabels:
      app: example1
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: example1
        version: v1
    spec:
      containers:
      - name: example1
        image: laurentiuspilca/istio-app1:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example1-v2
spec:
  selector:
    matchLabels:
      app: example1
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: example1
        version: v2
    spec:
      containers:
      - name: example1
        image: laurentiuspilca/istio-app1:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
