istio-demo1/ex3/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example1-app
spec:
  hosts:
  - "*"
  gateways:
  - example1-gateway
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percent: 100
    match:
    - headers:
        region:
          exact: US
    route:
    - destination:
        host: example1
        subset: v1
  - route:
    - destination:
        host: example1
        subset: v1
